# valq

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: basics.rs
res/: sample.toml  sample.yaml
src/: error.rs  lib.rs  util.rs
tests/: query_value.rs  query_value_result.rs  transpose_tuple.rs
