[package]
name = "valq"
version = "0.1.0"
authors = ["jiftechnify <jiftech.stlfy@gmail.com>"]
edition = "2021"
license = "MIT"
description = "macros for querying and extracting value from structured data by JavaScript-like syntax"
readme = "README.md"
repository = "https://github.com/jiftechnify/valq"
keywords = ["macro", "query", "extract", "json", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_json = "1.0.120"
serde_yaml = "0.9.34"
toml = "0.8.12"
