[package]
name = "valq"
version = "0.3.0"
authors = ["jiftechnify <jiftech.stlfy@gmail.com>"]
edition = "2021"
license = "MIT"
description = "macros for querying semi-structured data with the JavaScript-like syntax"
readme = "README.md"
repository = "https://github.com/jiftechnify/valq"
categories = ["rust-patterns"]
keywords = ["macro", "query", "extract", "json", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.15"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_yaml = "0.9.34"
toml = "0.9.10"
